# ttg

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  test
include/: parser.hpp
src/: main.cpp  parser.cpp
